<resources>
    <string name="app_name">Temperature Converter App</string>
    <string name="temperature_converter">Temperature Converter</string>
    <string name="to">to</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>
    <string name="enter_units_to_convert">Enter Units To Convert</string>
    <string name="convert_from">Convert From</string>
    <string name="convert_to">Convert To</string>
    <string name="convergion_racio">Convergion Racio</string>
    <string name="convert">Convert</string>
</resources>