<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/brickRedColor"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        android:textColorHint="#100E0E"
        app:boxCornerRadiusTopStart="10dp"
        android:background="@drawable/input_round">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/temperatureInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_units_to_convert"
            android:inputType="numberDecimal"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="25sp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/hot"
            android:contentDescription="@string/convert_to" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"

            android:src="@drawable/sun"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"

            android:src="@drawable/is_temperature"
            android:contentDescription="@string/todo" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="90dp"
            android:src="@drawable/earth"
            android:contentDescription="@string/todo" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@color/indianRedColor"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:src="@drawable/baseline_arrow_forward_24"
                    android:layout_gravity="top|center"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/todo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:ignore="UselessParent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/convert_from"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginStart="20dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/convert_to"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/spinner_from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_weight="1"
                            android:layout_marginEnd="15dp"
                            android:gravity="end"
                            android:textColor="@color/white"
                            android:background="@color/crimsonColor"
                            tools:ignore="TouchTargetSizeCheck" />

                        <Spinner
                            android:id="@+id/spinner_to"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="10dp"
                            android:textColor="@color/white"
                            android:gravity="end"
                            android:layout_weight="1"
                            android:background="@color/crimsonColor"
                            tools:ignore="TouchTargetSizeCheck" />

                    </LinearLayout>

                </LinearLayout>


                <androidx.cardview.widget.CardView
                    android:layout_width="300dp"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="20dp"
                    app:cardBackgroundColor="@color/brickRedColor"
                    app:cardCornerRadius="50dp">

                    <TextView
                        android:id="@+id/conversionResult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="30sp"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/convergion_racio"
                        android:textColor="@color/white"
                        android:layout_gravity="bottom|center"
                        android:layout_marginBottom="10dp"
                        android:textSize="15sp"
                        />

                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/convertButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/convert"
                >

            </Button>

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>